--- a/turnjs/resources/mebasic/project/_core.scss
+++ b/turnjs/resources/mebasic/project/_core.scss
@@ -18,7 +18,6 @@ $magazine_height: 600px;
 		.mag-btn {
 			height: 20px;
 			line-height: 20px;
-			// background: #09a1ec;
 			display: inline-block;
 			text-align: center;
 			color: #fff;
@@ -32,40 +31,28 @@ $magazine_height: 600px;
 			&:hover {
 				@include opacity(1);
 				background: #09a1ec;
-				// color: #fff;
 			}
 		}
 	}
 }
 
 .wrapper {
-	// position: relative;
 	margin: 30px auto;
 	width: $magazine_width * 2;
 }
 
 .magazine-wrapper {
-	// position: relative;
 }
 
 .magazine {
-	// position: absolute;
 	top: 0;
 	height: 0;
-	// width: $magazine_width * 2;
-	// height: $magazine_height;
-	// .turn-page {
-	// 	width: $magazine_width;
-	// 	height: $magazine_height;
-	// }
-	// img {
-	// 	width: $magazine_width;
-	// 	height: $magazine_height;
-	// }
-
 	@include transition(margin-left 1s);
-	// background: url(../images/bg.jpg);
 
+	img {}
+
+	.turn-page {}
+	
 	.page-wrapper {
 		@include perspective(5000px);
 	}
@@ -75,21 +62,9 @@ $magazine_height: 600px;
 		@include box-shadow(0 4px 10px rgba(0,0,0,.5));
 	}
 
-	// .odd {
-	// 	// @include box-shadow(inset -10px 0 5px rgba(0,0,0,.5));
-	// 	// @include opacity(0.6);
-	// 	img {
-	// 		background: #000;
-	// 		box-shadow: inset 10px 0 10px rgba(0,0,0,.8);
-	// 	}
-	// }
-
-	.shadow {
-		// background: rgba(0,0,0,.8);
-	}
+	.shadow {}
 
 	.odd {
-		// position: relative;
 		&::before {
 			content: "";
 			position: absolute;
@@ -114,7 +89,6 @@ $magazine_height: 600px;
 	display: none;
 	overflow: hidden;
 	background: rgba(0,0,0,.8);
-	// background: rgba(255,255,255,.8);
 	position: absolute;
 	width: 100%;
 	height: 100%;
