--- a/static/sass/project/_core.scss
+++ b/static/sass/project/_core.scss
@@ -62,6 +62,15 @@ header {
 	}
 }
 
+.building {
+	background: #f2f2f2;
+	border: 1px solid #ddd;
+	@include border-radius(1px);
+	padding: 5px 20px;
+	color: #666;
+	font-size: 14px;
+	margin-bottom: 40px;
+}
 
 .wrapper {
 	width: 800px;
@@ -98,7 +107,145 @@ ul.nav.article-list {
 	}
 }
 
+article {
 
+	width: 560px;
+	margin: 0 auto;
+
+	h1.title {
+		font-size: 26px;
+		color: #000;
+		font-weight: bold;
+		padding-bottom: 10px;
+		border-bottom: 3px double #ddd;
+	}
+
+	.info {
+		color: #aaa;
+		margin-bottom: 20px;
+		text-align: right;
+		> time {
+			> a {
+				color: #aaa;
+			}
+		}
+
+		> span.author {
+			a,
+			span {
+				color: #aaa;
+			}
+		}
+	}
+
+	.content {
+		h1 {
+		    margin-bottom: 18px;
+		    font-size: 30px;
+		}
+		h2 {
+		    font-size: 24px;
+		}
+		h3 {
+		    font-size: 18px;
+		}
+		h4 {
+		    font-size: 16px;
+		}
+		h5 {
+		    font-size: 14px;
+		}
+		h6 {
+		    font-size: 13px;
+		}
+		hr {
+		    margin: 0 0 19px;
+		    border: 0;
+		    border-bottom: 1px solid #ccc;
+		}
+		blockquote {
+			padding: 0;
+			margin: 0;
+		    padding: 5px 13px 21px 15px;
+		    border-left: 5px solid #e5e5e5;
+		    margin-bottom: 18px;
+		    font-family:georgia,serif;
+		    font-style: italic;
+		}
+		// blockquote:before {
+		// 	// height: 20px;
+		//     content: "\201C";
+		//     font-size: 40px;
+		//     margin: 0;
+		//     padding: 0;
+		//     //margin-left: -10px;
+		//     font-family: georgia,serif;
+		//     color: #eee;
+		// }
+		blockquote p {
+		    font-size: 14px;
+		    font-weight: 300;
+		    line-height: 18px;
+		    margin-bottom: 0;
+		    font-style: italic;
+		}
+		code, pre {
+		    font-family: Monaco, Andale Mono, Courier New, monospace;
+		}
+		code {
+		    background-color: #fee9cc;
+		    color: rgba(0, 0, 0, 0.75);
+		    padding: 1px 3px;
+		    font-size: 12px;
+		    -webkit-border-radius: 3px;
+		    -moz-border-radius: 3px;
+		    border-radius: 3px;
+		}
+		pre {
+		    display: block;
+		    padding: 14px;
+		    margin: 0 0 18px;
+		    line-height: 16px;
+		    font-size: 11px;
+		    border: 1px solid #d9d9d9;
+		    white-space: pre-wrap;
+		    word-wrap: break-word;
+		}
+		pre code {
+		    background-color: #fff;
+		    color:#737373;
+		    font-size: 11px;
+		    padding: 0;
+		}
+
+		p {
+			font-size: 15px;
+			line-height: 26px;
+			margin: 5px 0;
+			padding: 0;
+			color: #888;
+		}
+
+		ul {
+			font-size: 15px;
+			line-height: 20px;
+			color: #888;
+			padding-left: 25px;
+			> li {
+				margin-bottom: 5px;
+				a {
+					color: #888;
+				}
+			}
+		}
+
+		strong {
+			color: #666;
+			border-bottom: 1px dashed #ddd;
+		}
+	}
+
+}
 
 
 
