--- a/static/sass/project/_core.scss
+++ b/static/sass/project/_core.scss
@@ -262,7 +262,7 @@ article {
 		> .title {
 			font-size: 18px;
 			border-bottom: 3px double #ddd;
-			padding: 10px;
+			padding: 10px 0;
 			margin-bottom: 10px;
 		}
 		a {
